--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -944,70 +944,46 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "General", -1, "Button", BS_GROUPBOX, 44, 29, 336, 36
   CONTROL "Código de barras", -1, "Button", BS_GROUPBOX, 382, 29, 108, 36
-  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 44, 67, 336, 98
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 45, 233, 163, 52
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 44, 69, 336, 104
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 102, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 51, 279, 11
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 76, 56, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 156, 76, 221, 11
-  CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 88, 56, 11
-  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 156, 88, 221, 11
-  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 291, 56, 11
-  CONTROL "", 351, "Edit", WS_BORDER, 156, 291, 206, 11
-  CONTROL "", 352, "TBitmap", 0x00800000, 363, 291, 14, 11
-  CONTROL "", 355, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 304, 56, 11
-  CONTROL "", 356, "Edit", WS_BORDER, 156, 304, 206, 11
-  CONTROL "", 357, "TBitmap", 0x00800000, 363, 304, 14, 11
-  CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 124, 56, 11
-  CONTROL "", 391, "Edit", WS_BORDER, 156, 124, 221, 11
-  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 136, 56, 11
-  CONTROL "", 401, "Edit", WS_BORDER, 156, 136, 206, 11
-  CONTROL "", 402, "TBitmap", 0x00800000, 363, 136, 14, 11
-  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 149, 279, 11
-  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 178, 88, 10
-  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 190, 102, 11
-  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 216, 178, 90, 10
-  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 233, 191, 55, 10
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 98, 213, 55, 11
-  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 155, 213, 45, 41
-  CONTROL "Producto obsoleto ", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 216, 214, 128, 10
-  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 245, 73, 10
-  CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 258, 101, 10
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 98, 270, 56, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 291, 245, 86, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 291, 258, 86, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 291, 270, 86, 11
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 80, 56, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 156, 80, 221, 11
+  CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 92, 56, 11
+  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 156, 92, 221, 11
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 105, 56, 11
+  CONTROL "", 351, "Edit", WS_BORDER, 156, 105, 206, 11
+  CONTROL "", 352, "TBitmap", 0x00800000, 363, 103, 14, 11
+  CONTROL "", 355, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 118, 56, 11
+  CONTROL "", 356, "Edit", WS_BORDER, 156, 118, 206, 11
+  CONTROL "", 357, "TBitmap", 0x00800000, 363, 116, 14, 11
+  CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 131, 56, 11
+  CONTROL "", 391, "Edit", WS_BORDER, 156, 131, 221, 11
+  CONTROL "", 400, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 144, 56, 11
+  CONTROL "", 401, "Edit", WS_BORDER, 156, 144, 206, 11
+  CONTROL "", 402, "TBitmap", 0x00800000, 363, 144, 14, 11
+  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 157, 279, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
   CONTROL "Descripción", -1, "Static", WS_GROUP, 49, 54, 39, 8
-  CONTROL "Familia", 900, "Static", WS_GROUP, 49, 79, 33, 8
-  CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 91, 47, 8
-  CONTROL "Categoría", 700, "Static", WS_GROUP, 49, 294, 35, 8
-  CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 127, 47, 8
-  CONTROL "Temporada", 800, "Static", WS_GROUP, 49, 307, 47, 8
+  CONTROL "Familia", 900, "Static", WS_GROUP, 49, 83, 33, 8
+  CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 95, 47, 8
+  CONTROL "Categoría", 700, "Static", WS_GROUP, 49, 108, 35, 8
+  CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 134, 47, 8
+  CONTROL "Temporada", 800, "Static", WS_GROUP, 49, 121, 47, 8
   CONTROL "", 500, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Ref. auxiliar", -1, "Static", WS_GROUP, 216, 261, 62, 8
-  CONTROL "Ref. secundaria", -1, "Static", WS_GROUP, 216, 273, 62, 8
-  CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 193, 41, 8
-  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 167, 164, 37
-  CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 210, 167, 170, 37
-  CONTROL "Factor", -1, "Static", WS_GROUP, 49, 273, 33, 8
-  CONTROL "Caducidad", -1, "Static", WS_GROUP, 49, 216, 40, 8
-  CONTROL "Ubicación", 221, "Static", WS_GROUP, 49, 152, 39, 8
-  CONTROL "Estado", -1, "Static", WS_GROUP, 49, 139, 35, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 203, 164, 28
-  CONTROL "", -1, "Button", BS_GROUPBOX, 210, 203, 170, 28
-  CONTROL "EDI [EAN]", -1, "Button", BS_GROUPBOX, 210, 233, 170, 52
+  CONTROL "Ubicación", 221, "Static", WS_GROUP, 49, 159, 39, 8
+  CONTROL "Estado", -1, "Static", WS_GROUP, 49, 147, 35, 8
   CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 421, 39, 65, 11
   CONTROL "Añ&d [F2]", 300, "Button", WS_TABSTOP, 387, 76, 33, 14
   CONTROL "&Mod [F3]", 310, "Button", WS_TABSTOP, 420, 76, 33, 14
   CONTROL "&Elim [F4]", 320, "Button", WS_TABSTOP, 453, 76, 33, 14
   CONTROL "", 330, "TXBrowse", 0x00200000, 388, 91, 98, 188
-  CONTROL "Código normalizado", -1, "Static", WS_GROUP, 216, 248, 62, 8
   CONTROL "Matriz", -1, "Static", WS_GROUP, 388, 42, 24, 8
   CONTROL "Relación de codigos barras", -1, "Button", BS_GROUPBOX, 382, 67, 108, 216
-  CONTROL "", 100, "TTagEver", WS_GROUP, 46, 101, 316, 21
-  CONTROL "", 101, "TBtnBmp", 0x00000000, 363, 101, 12, 11
+  CONTROL "", 100, "TTagEver", WS_GROUP, 46, 187, 316, 91
+  CONTROL "", 101, "TBtnBmp", 0x00000000, 363, 187, 12, 11
+  CONTROL "Etiquetas", -1, "Button", BS_GROUPBOX, 44, 175, 336, 108
 }
 
 ART_10 DIALOG DISCARDABLE 32, 6, 496, 286
@@ -21252,5 +21228,38 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 313, 313, 50, 14
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 360, 31
   CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_EDITLABELS|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 4, 37, 360, 270
+}
+
+ART_ADICIONAL DIALOG DISCARDABLE 36, 16, 496, 306
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 41, 88, 10
+  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 124, 53, 102, 11
+  CONTROL "Producto catalogado de obsoleto", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 82, 118, 10
+  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 112, 90, 10
+  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 68, 125, 55, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 124, 152, 55, 11
+  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 181, 152, 45, 41
+  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 182, 73, 10
+  CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 196, 101, 10
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 124, 208, 85, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 124, 238, 86, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 124, 251, 86, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 124, 264, 86, 11
+  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 29, 448, 39
+  CONTROL "Datos adicionales", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 61, 8
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
+  CONTROL "Lote actual", -1, "Static", WS_GROUP, 66, 56, 41, 8
+  CONTROL "Número de serie", -1, "Button", BS_GROUPBOX, 43, 101, 448, 39
+  CONTROL "Caducidad", -1, "Static", WS_GROUP, 50, 155, 40, 8
+  CONTROL "Caducidad", -1, "Button", BS_GROUPBOX, 43, 143, 448, 25
+  CONTROL "Factor", -1, "Static", WS_GROUP, 66, 211, 33, 8
+  CONTROL "Ref. auxiliar", -1, "Static", WS_GROUP, 49, 254, 62, 8
+  CONTROL "Ref. secundaria", -1, "Static", WS_GROUP, 49, 267, 62, 8
+  CONTROL "Código normalizado", -1, "Static", WS_GROUP, 49, 241, 62, 8
+  CONTROL "Conversiones", -1, "Button", BS_GROUPBOX, 43, 171, 448, 53
+  CONTROL "Codificación auxiliar", -1, "Button", BS_GROUPBOX, 43, 227, 448, 53
+  CONTROL "Obsoleto", -1, "Button", BS_GROUPBOX, 43, 71, 448, 27
 }
 
