--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21228,6 +21228,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 313, 313, 50, 14
   CONTROL "Buscar por", -1, "Button", BS_GROUPBOX, 4, 2, 360, 31
   CONTROL "", 110, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_EDITLABELS|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 4, 37, 360, 270
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 5, 313, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 60, 313, 50, 14
 }
 
 ART_ADICIONAL DIALOG DISCARDABLE 36, 16, 496, 306
