--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21265,3 +21265,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Obsoleto", -1, "Button", BS_GROUPBOX, 43, 71, 448, 27
 }
 
+ARTICULO_PRESTASHOP_ID DIALOG DISCARDABLE 266, 165, 263, 289
+STYLE WS_POPUP|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
+CAPTION "Identificadores de prestashop"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 3, 4, 255, 261
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 208, 270, 50, 14
+}
+
