--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21270,3 +21270,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 208, 270, 50, 14
 }
 
+ETIQUETA_LINEA DIALOG DISCARDABLE 144, 103, 378, 163
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "TTagEver", WS_GROUP, 4, 13, 354, 140
+  CONTROL "", 101, "TBtnBmp", 0x00000000, 360, 13, 12, 11
+  CONTROL "Etiquetas", -1, "Button", BS_GROUPBOX, 2, 2, 373, 156
+}
+
