--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21208,15 +21208,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Web", -1, "Static", WS_GROUP, 4, 8, 16, 8
 }
 
-TIPO_INCIDENCIA DIALOG DISCARDABLE 77, 58, 281, 43
+TIPO_INCIDENCIA DIALOG DISCARDABLE 77, 58, 277, 47
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Tipos impresoras"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 9, 220, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 171, 26, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 26, 50, 14
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 53, 17, 220, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 172, 30, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 224, 30, 50, 14
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 3, 20, 39, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 53, 4, 79, 11
+  CONTROL "Código", -1, "Static", WS_GROUP, 3, 7, 39, 8
 }
 
 HELP_ETIQUETAS DIALOG DISCARDABLE 141, -5, 369, 330
@@ -21284,14 +21286,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "Etiquetas", -1, "Button", BS_GROUPBOX, 2, 2, 373, 156
 }
 
-TIPO_VENTA DIALOG DISCARDABLE 28, 74, 409, 35
+TIPO_VENTA DIALOG DISCARDABLE 28, 74, 314, 49
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Tipos de Venta"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 49, 3, 357, 12
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 3, 6, 41, 8
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 301, 18, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 356, 18, 50, 14
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 17, 263, 12
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 3, 20, 41, 8
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 207, 32, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 262, 32, 50, 14
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 4, 85, 11
+  CONTROL "Código", -1, "Static", WS_GROUP, 3, 7, 39, 8
 }
 
