--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -421,13 +421,13 @@ ARQUEO_3 DIALOG DISCARDABLE -47, 69, 605, 318
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 800, "TXBrowse", WS_TABSTOP|0x00a00000, 44, 58, 557, 193
+  CONTROL "", 800, "TXBrowse", WS_TABSTOP|0x00a00000, 42, 58, 557, 193
   CONTROL "", 420, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 283, 262, 128, 11
   CONTROL "", 430, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 283, 275, 128, 11
   CONTROL "", 460, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 283, 288, 128, 11
   CONTROL "", 465, "Edit", ES_RIGHT|WS_BORDER, 283, 301, 128, 11
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 50, 41, 91, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 144, 41, 450, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 144, 41, 279, 11
   CONTROL "Cobros calculados", 500, "Button", BS_GROUPBOX, 44, 254, 143, 62
   CONTROL "Caja", -1, "Button", BS_GROUPBOX, 44, 30, 558, 26
   CONTROL "Efectivo", 401, "Static", WS_GROUP, 50, 265, 49, 8
@@ -435,7 +435,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tarjeta", 402, "Static", WS_GROUP, 50, 278, 27, 8
   CONTROL "0", 400, "Static", SS_RIGHT|WS_GROUP, 119, 265, 60, 8
   CONTROL "En caja", -1, "Button", BS_GROUPBOX, 195, 254, 224, 62
-  CONTROL "Diferencias", 480, "Button", BS_GROUPBOX, 427, 254, 175, 62
+  CONTROL "Diferencias", 480, "Button", BS_GROUPBOX, 426, 254, 176, 62
   CONTROL "Efectivo", -1, "Static", WS_GROUP, 201, 264, 31, 8
   CONTROL "Tarjeta", -1, "Static", WS_GROUP, 201, 277, 27, 8
   CONTROL "Efectivo", 441, "Static", WS_GROUP, 433, 265, 60, 8
@@ -455,6 +455,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "No efectivo", 403, "Static", WS_GROUP, 50, 291, 48, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Arqueo de caja", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "", 142, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, 427, 41, 171, 11
 }
 
 APTURNO DIALOG DISCARDABLE 31, 110, 410, 206
