--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19093,32 +19093,33 @@ FONT 8, "Helv"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-TPVMENUORDENES DIALOG DISCARDABLE 60, 16, 297, 236
+TPVMENUORDENES DIALOG DISCARDABLE 60, 16, 297, 286
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Orden de comanda"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 79, 13, 33, 11
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 79, 28, 207, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 79, 43, 32, 11
-  CONTROL "Intercambiable", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 60, 63, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 89, 50, 14
-  CONTROL "&Modificar [F3]", 503, "Button", WS_TABSTOP, 62, 89, 50, 14
-  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 118, 89, 50, 14
-  CONTROL "&Ficha Art.", 502, "Button", WS_TABSTOP, 239, 89, 50, 14
-  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 105, 282, 105
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 189, 219, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 244, 219, 50, 14
-  CONTROL "Orden", -1, "Button", BS_GROUPBOX, 2, 3, 290, 72
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 79, 26, 207, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 79, 39, 32, 11
+  CONTROL "Intercambiable", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 79, 53, 63, 10
+  CONTROL "Degustación", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 79, 65, 53, 10
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 92, 50, 14
+  CONTROL "&Modificar [F3]", 503, "Button", WS_TABSTOP, 62, 92, 50, 14
+  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 118, 92, 50, 14
+  CONTROL "&Ficha Art.", 502, "Button", WS_TABSTOP, 239, 92, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 108, 282, 145
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 187, 265, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 242, 265, 50, 14
+  CONTROL "Orden", -1, "Button", BS_GROUPBOX, 2, 3, 290, 77
   CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 38, 8
-  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 44, 8
-  CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 2, 79, 290, 135
-  CONTROL "Nº Unidades Acomp.", 4002, "Static", WS_GROUP, 10, 46, 69, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 30, 44, 8
+  CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 2, 82, 290, 177
+  CONTROL "Nº Unidades Acomp.", 4002, "Static", WS_GROUP, 10, 42, 69, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-TPVMENUS DIALOG DISCARDABLE 39, 38, 345, 275
+TPVMENUS DIALOG DISCARDABLE 39, 38, 345, 303
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Menús"
 FONT 8, "MS Sans Serif"
@@ -19127,17 +19128,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 43, 16, 293, 11
   CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 43, 29, 100, 11
   CONTROL "Menú acompañamiento", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 43, 43, 92, 10
-  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 43, 54, 43, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 77, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 77, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 77, 50, 14
-  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 93, 329, 155
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 235, 257, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 290, 257, 50, 14
+  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 43, 57, 43, 10
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 83, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 83, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 83, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 99, 329, 175
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 235, 283, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 290, 283, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 35, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 4, 6, 37, 8
   CONTROL "Precio", -1, "Static", WS_GROUP, 4, 32, 34, 8
-  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 66, 339, 187
+  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 72, 339, 207
 }
 
 TRABAJADOR DIALOG DISCARDABLE 102, 33, 571, 330
@@ -21271,14 +21272,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "Etiquetas", -1, "Button", BS_GROUPBOX, 2, 2, 373, 156
 }
 
-TIPO_VENTA DIALOG DISCARDABLE 28, 74, 314, 35
+TIPO_VENTA DIALOG DISCARDABLE 28, 74, 314, 55
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Tipos de Venta"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 3, 263, 12
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 3, 6, 41, 8
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 207, 18, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 262, 18, 50, 14
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 20, 260, 12
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 23, 41, 8
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 204, 36, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 259, 36, 50, 14
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 6, 60, 12
+  CONTROL "Código", -1, "Static", WS_GROUP, 4, 9, 41, 8
 }
 
