--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13334,18 +13334,19 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-LMOVALM DIALOG DISCARDABLE 80, 40, 536, 308
+LMOVALM DIALOG DISCARDABLE 80, 40, 536, 291
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lineas de movimientos de almacén"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 70, 13, 88, 11
   CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 161, 13, 372, 11
-  CONTROL "", 155, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 70, 26, 88, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 70, 40, 68, 12
-  CONTROL "", 121, "Edit", WS_BORDER, 161, 40, 372, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 70, 53, 68, 12
-  CONTROL "", 131, "Edit", WS_BORDER, 161, 53, 372, 12
+  CONTROL "", 155, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 70, 26, 88, 11
+  CONTROL "", 340, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 70, 39, 88, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 70, 52, 88, 12
+  CONTROL "", 121, "Edit", WS_BORDER, 161, 52, 372, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 70, 65, 88, 12
+  CONTROL "", 131, "Edit", WS_BORDER, 161, 65, 372, 12
   CONTROL "", 600, "TXBrowse", 0x00200000, 4, 26, 530, 150
   CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 70, 179, 68, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 70, 192, 68, 11
@@ -13366,8 +13367,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Total unidades", -1, "Static", WS_GROUP, 4, 221, 60, 8
   CONTROL "Unidades", 152, "Static", WS_GROUP, 4, 208, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 16, 36, 8
-  CONTROL "Propiedad 2", 132, "Static", WS_GROUP, 4, 55, 44, 8
-  CONTROL "Propiedad 1", 122, "Static", WS_GROUP, 4, 42, 44, 8
+  CONTROL "Propiedad 2", 132, "Static", WS_GROUP, 4, 67, 44, 8
+  CONTROL "Propiedad 1", 122, "Static", WS_GROUP, 4, 54, 44, 8
   CONTROL "Precio costo", 181, "Static", WS_GROUP, 4, 234, 61, 8
   CONTROL "Total precio", 191, "Static", WS_GROUP, 4, 247, 61, 8
   CONTROL "Lote", 154, "Static", WS_GROUP, 4, 29, 44, 8
@@ -13385,6 +13386,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Almacen destino", -1, "Static", WS_GROUP, 143, 208, 55, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 143, 260, 33, 8
   CONTROL "Bultos", 431, "Static", WS_GROUP, 4, 182, 48, 8
+  CONTROL "Caducidad", 341, "Static", WS_GROUP, 4, 40, 41, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
