--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16191,7 +16191,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Clientes y obras", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 205, 300, 85
 }
 
-PROP DIALOG DISCARDABLE 70, 20, 354, 253
+PROP DIALOG DISCARDABLE 70, 20, 354, 297
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Propiedades"
 FONT 8, "Helv"
@@ -16199,18 +16199,22 @@ FONT 8, "Helv"
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 13, 60, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 26, 296, 11
   CONTROL "Propiedad de tipo color", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 41, 88, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 8, 68, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 63, 68, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 68, 50, 14
-  CONTROL "", 120, "TXBrowse", WS_TABSTOP|0x00300000, 8, 84, 338, 142
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 247, 235, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 300, 235, 50, 14
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 8, 102, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 63, 102, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 102, 50, 14
+  CONTROL "", 120, "TXBrowse", WS_TABSTOP|0x00300000, 8, 118, 338, 142
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 247, 269, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 300, 269, 50, 14
   CONTROL "Propiedad", -1, "Button", BS_GROUPBOX, 2, 3, 348, 52
-  CONTROL "Tabla de propiedades", -1, "Button", BS_GROUPBOX, 2, 56, 348, 176
+  CONTROL "Tabla de propiedades", -1, "Button", BS_GROUPBOX, 2, 90, 348, 176
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 17, 30, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 30, 30, 8
-  CONTROL "Bajar", 504, "Button", WS_TABSTOP, 312, 68, 34, 14
-  CONTROL "Subir", 503, "Button", WS_TABSTOP, 275, 68, 34, 14
+  CONTROL "Bajar", 504, "Button", WS_TABSTOP, 312, 102, 34, 14
+  CONTROL "Subir", 503, "Button", WS_TABSTOP, 275, 102, 34, 14
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 50, 64, 296, 11
+  CONTROL "Publicar en Internet", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 78, 88, 10
+  CONTROL "Internet", -1, "Button", BS_GROUPBOX, 2, 54, 348, 37
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 66, 30, 8
 }
 
 PROP_GRAPH DIALOG DISCARDABLE 6, 18, 316, 161
@@ -21281,5 +21285,48 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 259, 36, 50, 14
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 6, 60, 12
   CONTROL "Código", -1, "Static", WS_GROUP, 4, 9, 41, 8
+}
+
+PROP_SQL DIALOG DISCARDABLE 70, 20, 354, 253
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Propiedades"
+FONT 8, "Helv"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 13, 60, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 26, 296, 11
+  CONTROL "Propiedad de tipo color", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 41, 88, 10
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 8, 68, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 63, 68, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 68, 50, 14
+  CONTROL "", 120, "SQLXBrowse", WS_TABSTOP|0x00300000, 8, 84, 338, 142
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 247, 235, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 300, 235, 50, 14
+  CONTROL "Propiedad", -1, "Button", BS_GROUPBOX, 2, 3, 348, 52
+  CONTROL "Tabla de propiedades", -1, "Button", BS_GROUPBOX, 2, 56, 348, 176
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 17, 30, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 30, 30, 8
+  CONTROL "Bajar", 504, "Button", WS_TABSTOP, 312, 68, 34, 14
+  CONTROL "Subir", 503, "Button", WS_TABSTOP, 275, 68, 34, 14
+}
+
+PRODET_SQL DIALOG DISCARDABLE 30, 71, 282, 93
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Tabla de propiedades"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 104, 3, 100, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 104, 16, 175, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 104, 29, 60, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 104, 42, 60, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 104, 55, 175, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 118, 75, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 173, 75, 50, 14
+  CONTROL "&Ayuda", 9, "Button", WS_TABSTOP, 228, 75, 50, 14
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 3, 19, 45, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 3, 6, 45, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 2, 69, 279, 1
+  CONTROL "Número para código de barras", -1, "Static", WS_GROUP, 3, 45, 98, 8
+  CONTROL "Número de orden", -1, "Static", WS_GROUP, 3, 32, 98, 8
+  CONTROL "Color", -1, "Static", WS_GROUP, 4, 58, 98, 8
 }
 
